fixing header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -217,11 +217,11 @@ main section {
 }
 
 .bg-light {
-  background-color: #e0e0e0;
+  background-color: #e2e2e2;
 }
 
 .bg-lighter {
-  background-color: #d3d3d3;
+  background-color: #ffffff;
 }
 
 /* === Typography === */
